@startuml
title Diagrama de Clases - Plataforma Cursos Online

class User {
  +Guid Id
  +string Username
  +string PasswordHash
  +List<Enrollment> Enrollments
}

class Course {
  +Guid Id
  +string Title
  +string? Description
  +bool Published
  +List<Enrollment> Enrollments
}

class Enrollment {
  +Guid Id
  +Guid UserId
  +Guid CourseId
  +DateTime EnrolledAt
  +User User
  +Course Course
}

User "1" -- "*" Enrollment
Course "1" -- "*" Enrollment

interface ICourseRepository {
  +Task<IEnumerable<Course>> GetAllAsync()
  +Task<Course?> GetByIdAsync(Guid id)
  +Task AddAsync(Course course)
}

interface IEnrollmentRepository {
  +Task<bool> ExistsAsync(Guid userId, Guid courseId)
  +Task AddAsync(Enrollment enrollment)
  +Task<IEnumerable<Enrollment>> GetByUserAsync(Guid userId)
}

class CourseService {
  -ICourseRepository _repo
  +Task<IEnumerable<CourseDto>> GetCoursesAsync()
}

class EnrollmentService {
  -ICourseRepository _courses
  -IEnrollmentRepository _enrollments
  +Task EnrollAsync(Guid userId, Guid courseId)
  +Task<IEnumerable<EnrollmentDto>> GetMyAsync(Guid userId)
}

ICourseRepository <|.. CourseService
IEnrollmentRepository <|.. EnrollmentService

@enduml
